Modal overflow scroll fixed

--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -56,7 +56,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  overflow: scroll;
+  // overflow: scroll;
   width: 450px;
   height: 680px;
   max-width: 100%;
